src/app/main/projects/projects.component.scss
@import "variables";

.projects {
  padding: 4.8rem;
  width: 100%;
  margin-top: $section-gap;
  background-color: $color-primary-light-3;

  &__container {
    max-width: 192rem;
    margin: 0 auto;
  }

  &__technologies-text {
    @media (max-width: $TabLand) {
      display: none;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    row-gap: 8rem;
    list-style: none;

    li {
      display: flex;
      align-items: center;
      justify-content: center;
      column-gap: 12.8rem;

      @media (max-width: 75em) {
        column-gap: 6.4rem;
      }

      @media (max-width: $TabLand) {
        flex-direction: column-reverse;
      }

      @media (min-width: $TabLand) {
        &:nth-child(even) {
          flex-direction: row-reverse;
        }
      }
    }
  }

  &__info-box {
    width: 100%;
    max-width: 65rem;
    display: flex;
    flex-direction: column;
    row-gap: 4.8rem;

    & > div {
      display: flex;
      align-items: flex-start;
      gap: 2.4rem;

      @media (max-width: $Phone) {
        flex-direction: column;
      }

      & > div {
        display: flex;
        flex-direction: column;
        row-gap: 1.6rem;
      }
    }

    @media (max-width: $TabLand) {
      margin-top: 5.4rem;
      max-width: 85rem;

      h3 {
        display: none;
      }
    }
  }

  &__img-box {
    display: flex;
    flex-direction: column;
    row-gap: 2.4rem;
    text-align: center;

    & > img {
      border-radius: 24px;
      box-shadow: 0 0rem 3rem rgba(0, 0, 0, 0.1);

      @media (max-width: $Phone) {
        width: 30rem;
      }
    }
  }

  &__tools img {
    @media (max-width: $Phone) {
      width: 5rem;
    }
  }

  &__tools,
  &__buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    column-gap: 2.4rem;
  }

  h3 {
    font-size: 3rem;
    color: $color-primary;
  }
}

